[tool.poetry]
name = "Codarium_course"
version = "0.1.0"
description = ""
authors = ["VladGalchevsky"]

[tool.poetry.dependencies]
python = "^3.8"
selene = "2.0.0b5"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
