[tool.poetry]
name = "Codarium_course"
version = "0.1.0"
description = ""
authors = ["VladGalchevsky"]

[tool.poetry.dependencies]
python = "^3.8"
selene = "2.0.0b5"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
pytest-xdist = "^3.0.2"
allure-pytest = "^2.11.1"
[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
